Modules/LancetHardwareDevice/DianaApi/include/DianaApiCommon.h

DIANA_API int getJointCount(const char *strIpAddress = "");
DIANA_API int calculateJacobiTF(/*OUT[6*7]*/ double *dblJacobiMatrix,
                                /*IN[7]*/ const double *dblJointPosition,
                                /*IN*/ int intJointCount, /*IN[6]*/ double *active_tcp = nullptr,
                                /*IN*/ const char *strIpAddress = "");
DIANA_API int setControllerFeatureCode(/*IN*/ controller_feature intFeatureCode, /*IN*/ bool bEnable,
                                       /*IN*/ const char *strIpAddress = "");
DIANA_API int testControllerFeature(/*IN*/ controller_feature intFeatureCode, /*OUT*/ bool &bEnable,
                                    /*IN*/ const char *strIpAddress = "");
DIANA_API int setAvoidSingular(/*IN*/ bool bEnable,
                               /*IN*/ const char *strIpAddress);
DIANA_API int getAvoidSingular(/*OUT*/ bool *bEnable,
                               /*IN*/ const char *strIpAddress);
DIANA_API int getMechanicalJointsPositionRange(/*OUT[7]*/ double *dblMinPos, /*OUT[7]*/ double *dblMaxPos,
                                               /*IN*/ const char *strIpAddress = "");
DIANA_API int getMechanicalMaxJointsVel(/*OUT[7]*/ double *dblVel, /*IN*/ const char *strIpAddress = "");
DIANA_API int getMechanicalMaxJointsAcc(/*OUT[7]*/ double *dblAcc, /*IN*/ const char *strIpAddress = "");
DIANA_API int getMechanicalMaxCartVelAcc(/*OUT*/ double &dblMaxCartTranslationVel,
                                         /*OUT*/ double &dblMaxCartRotationVel,
                                         /*OUT*/ double &dblMaxCartTranslationAcc,
                                         /*OUT*/ double &dblMaxCartRotationAcc,
                                         /*IN*/ const char *strIpAddress = "");
DIANA_API int getJointsPositionRange(/*OUT[7]*/ double *dblMinPos, /*OUT[7]*/ double *dblMaxPos,
                                     /*IN*/ const char *strIpAddress = "");
DIANA_API int getMaxJointsVel(/*OUT[7]*/ double *dblVel, /*IN*/ const char *strIpAddress = "");
DIANA_API int getMaxJointsAcc(/*OUT[7]*/ double *dblAcc, /*IN*/ const char *strIpAddress = "");
DIANA_API int getMaxCartTranslationVel(/*OUT*/ double &dblMaxCartTranslationVel, /*IN*/ const char *strIpAddress = "");
DIANA_API int getMaxCartRotationVel(/*OUT*/ double &dblMaxCartRotationVel, /*IN*/ const char *strIpAddress = "");
DIANA_API int getMaxCartTranslationAcc(/*OUT*/ double &dblMaxCartTranslationAcc, /*IN*/ const char *strIpAddress = "");
DIANA_API int getMaxCartRotationAcc(/*OUT*/ double &dblMaxCartRotationAcc, /*IN*/ const char *strIpAddress = "");
DIANA_API int setJointsPositionRange(/*IN[7]*/ double *dblMinPos, /*IN[7]*/ double *dblMaxPos,
                                     /*IN*/ const char *strIpAddress = "");
DIANA_API int setMaxJointsVel(/*IN[7]*/ double *dblVel, /*IN*/ const char *strIpAddress = "");
DIANA_API int setMaxJointsAcc(/*IN[7]*/ double *dblAcc, /*IN*/ const char *strIpAddress = "");
DIANA_API int setMaxCartTranslationVel(/*IN*/ double dblMaxCartTranslationVel, /*IN*/ const char *strIpAddress = "");
DIANA_API int setMaxCartRotationVel(/*IN*/ double dblMaxCartRotationVel, /*IN*/ const char *strIpAddress = "");
DIANA_API int setMaxCartTranslationAcc(/*IN*/ double dblMaxCartTranslationAcc, /*IN*/ const char *strIpAddress = "");
DIANA_API int setMaxCartRotationAcc(/*OUT*/ double dblMaxCartRotationAcc, /*IN*/ const char *strIpAddress = "");
DIANA_API int getJointsSoftLimitRange(/*OUT[7]*/ double *dblMinPos, /*OUT[7]*/ double *dblMaxPos,
                                      /*IN*/ const char *strIpAddress = "");