Plugins/org.mitk.lancet.CZXtest/DianaApi/X64/include/DianaApiSpecial.h

// industry-v2.8 api
DIANA_API int requireHandlingError(/*OUT*/ int *error, /*IN*/ const char *strIpAddress = "");