Modules/LancetHardwareDevice/DianaApi/Release/DianaApi.py


def calculateJacobiTF(matrixJacobi, joints, toolMatrix, ipAddress=''):
    _joint_count = getJointCount(ipAddress)
    dianaJoints = DIANA_JOINTS_POSITION()
    dianaJoints.values = (c_double * 7)()
    for index in range(0, len(joints)):
        dianaJoints.values[index] = joints[index]
    dianaToolMatrix = DIANA_ACTIVE_TCP()
    dianaToolMatrix.values = (c_double * 6)()
    for index in range(0, len(toolMatrix)):
        dianaToolMatrix.values[index] = toolMatrix[index]
    dianaJacobiMatrix = DIANA_JACOBI_MATRIX()
    dianaJacobiMatrix.values = (c_double * 42)()
    api_mod.calculateJacobiTF.argtypes = [POINTER(DIANA_JACOBI_MATRIX),POINTER(DIANA_JOINTS_POSITION), c_int, POINTER(DIANA_ACTIVE_TCP), c_char_p]
    api_mod.calculateJacobiTF.restype = c_int
    ret = api_mod.calculateJacobiTF(byref(dianaJacobiMatrix), dianaJoints, _joint_count, dianaToolMatrix, bytes(ipAddress.encode('utf-8')))
    if ret < 0 :
        return message(ret)
    for index in range(0, _joint_count * 6):
        matrixJacobi[index] = dianaJacobiMatrix.values[index]
    return message(ret)

def setControllerFeature(feature_code, enable, ipAddress=''):
    api_mod.setControllerFeatureCode.argtypes = [c_int, c_bool, c_char_p]
    api_mod.setControllerFeatureCode.restype = c_int
    ret = api_mod.setControllerFeatureCode(feature_code.value, enable, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def testControllerFeature(feature_code, ipAddress=''):
    enable = False
    api_mod.testControllerFeature.argtypes = [c_int, POINTER(c_bool), c_char_p]
    api_mod.testControllerFeature.restype = c_int
    ret = api_mod.testControllerFeature(feature_code.value, byref(enable), bytes(ipAddress.encode('utf-8')))
    return enable

def setAvoidSingular(enable, ipAddress=''):
    api_mod.setAvoidSingular.argtypes = [c_bool,c_char_p]
    api_mod.setAvoidSingular.restype = c_int
    ret = api_mod.setAvoidSingular(enable.value, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def getAvoidSingular(enable, ipAddress=''):
    enable = False
    api_mod.getAvoidSingular.argtypes = [POINTER(c_bool), c_char_p]
    api_mod.getAvoidSingular.restype = c_int
    ret = api_mod.getAvoidSingular(byref(enable), bytes(ipAddress.encode('utf-8')))
    return enable

def getMechanicalJointsPositionRange(arrMin, arrMax, ipAddress = ''):
    jointsMin = DIANA_JOINTS_POSITION()
    jointsMin.values = (c_double*7)()
    jointsMax = DIANA_JOINTS_POSITION()
    jointsMax.values = (c_double*7)()
    api_mod.getMechanicalJointsPositionRange.argtypes = [POINTER(DIANA_JOINTS_POSITION), POINTER(DIANA_JOINTS_POSITION), c_char_p]
    api_mod.getMechanicalJointsPositionRange.restype = c_int
    ret = api_mod.getMechanicalJointsPositionRange(byref(jointsMin), byref(jointsMax), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(arrMin)):
        arrMin[index] = jointsMin.values[index]
    for index in range(0, len(arrMax)):
        arrMax[index] = jointsMax.values[index]
    return message(ret)

def getMechanicalMaxJointsVel(arrVel, ipAddress = ''):
    jointsVel = DIANA_JOINT_ANGULAR_VEL()
    jointsVel.values = (c_double*7)()
    api_mod.getMechanicalMaxJointsVel.argtypes = [POINTER(DIANA_JOINT_ANGULAR_VEL), c_char_p]
    api_mod.getMechanicalMaxJointsVel.restype = c_int
    ret = api_mod.getMechanicalMaxJointsVel(byref(jointsVel), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(arrVel)):
        arrVel[index] = jointsVel.values[index]
    return message(ret)

def getMechanicalMaxJointsAcc(arrAcc, ipAddress = ''):
    jointsAcc = DIANA_JOINT_ACC()
    jointsAcc.values = (c_double*7)()
    api_mod.getMechanicalMaxJointsAcc.argtypes = [POINTER(DIANA_JOINT_ACC), c_char_p]
    api_mod.getMechanicalMaxJointsAcc.restype = c_int
    ret = api_mod.getMechanicalMaxJointsAcc(byref(jointsAcc), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(arrAcc)):
        arrAcc[index] = jointsAcc.values[index]
    return message(ret)

def getMechanicalMaxCartVelAcc(ipAddress = ''):
    cartTranslationVel = c_double()
    cartRotationVel = c_double()
    cartTranslationAcc = c_double()
    cartRotationAcc = c_double()
    api_mod.getMechanicalMaxCartVelAcc.argtypes = [POINTER(c_double), POINTER(c_double), POINTER(c_double), POINTER(c_double), c_char_p]
    api_mod.getMechanicalMaxCartVelAcc.restype = c_int
    ret = api_mod.getMechanicalMaxCartVelAcc(byref(cartTranslationVel), byref(cartRotationVel), byref(cartTranslationAcc), byref(cartRotationAcc), bytes(ipAddress.encode('utf-8')))
    return message(ret),cartTranslationVel.value,cartRotationVel.value,cartTranslationAcc.value,cartRotationAcc.value

def getJointsPositionRange(arrMin, arrMax, ipAddress = ''):
    jointsMin = DIANA_JOINTS_POSITION()
    jointsMin.values = (c_double*7)()
    jointsMax = DIANA_JOINTS_POSITION()
    jointsMax.values = (c_double*7)()
    api_mod.getJointsPositionRange.argtypes = [POINTER(DIANA_JOINTS_POSITION), POINTER(DIANA_JOINTS_POSITION), c_char_p]
    api_mod.getJointsPositionRange.restype = c_int
    ret = api_mod.getJointsPositionRange(byref(jointsMin), byref(jointsMax), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(arrMin)):
        arrMin[index] = jointsMin.values[index]
    for index in range(0, len(arrMax)):
        arrMax[index] = jointsMax.values[index]
    return message(ret)

def getMaxJointsVel(arrVel, ipAddress = ''):
    jointsVel = DIANA_JOINT_ANGULAR_VEL()
    jointsVel.values = (c_double*7)()
    api_mod.getMaxJointsVel.argtypes = [POINTER(DIANA_JOINT_ANGULAR_VEL), c_char_p]
    api_mod.getMaxJointsVel.restype = c_int
    ret = api_mod.getMaxJointsVel(byref(jointsVel), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(arrVel)):
        arrVel[index] = jointsVel.values[index]
    return message(ret)

def getMaxJointsAcc(arrAcc, ipAddress = ''):
    jointsAcc = DIANA_JOINT_ACC()
    jointsAcc.values = (c_double*7)()
    api_mod.getMaxJointsAcc.argtypes = [POINTER(DIANA_JOINT_ACC), c_char_p]
    api_mod.getMaxJointsAcc.restype = c_int
    ret = api_mod.getMaxJointsAcc(byref(jointsAcc), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(arrAcc)):
        arrAcc[index] = jointsAcc.values[index]
    return message(ret)

def getMaxCartTranslationVel(ipAddress = ''):
    cartTranslationVel = c_double()
    api_mod.getMaxCartTranslationVel.argtypes = [POINTER(c_double), c_char_p]
    api_mod.getMaxCartTranslationVel.restype = c_int
    ret = api_mod.getMaxCartTranslationVel(byref(cartTranslationVel), bytes(ipAddress.encode('utf-8')))
    return message(ret),cartTranslationVel.value

def getMaxCartRotationVel(ipAddress = ''):
    cartRotationVel = c_double()
    api_mod.getMaxCartRotationVel.argtypes = [POINTER(c_double), c_char_p]
    api_mod.getMaxCartRotationVel.restype = c_int
    ret = api_mod.getMaxCartRotationVel(byref(cartRotationVel), bytes(ipAddress.encode('utf-8')))
    return message(ret),cartRotationVel.value

def getMaxCartTranslationAcc(ipAddress = ''):
    cartTranslationAcc = c_double()
    api_mod.getMaxCartTranslationAcc.argtypes = [POINTER(c_double), c_char_p]
    api_mod.getMaxCartTranslationAcc.restype = c_int
    ret = api_mod.getMaxCartTranslationAcc(byref(cartTranslationAcc), bytes(ipAddress.encode('utf-8')))
    return message(ret),cartTranslationAcc.value

def getMaxCartRotationAcc(ipAddress = ''):
    cartRotationAcc = c_double()
    api_mod.getMaxCartRotationAcc.argtypes = [POINTER(c_double), c_char_p]
    api_mod.getMaxCartRotationAcc.restype = c_int
    ret = api_mod.getMaxCartRotationAcc(byref(cartRotationAcc), bytes(ipAddress.encode('utf-8')))
    return message(ret),cartRotationAcc.value

def setJointsPositionRange(arrMinPos, arrMaxPos, ipAddress = ''):
    jointMin = DIANA_JOINTS_POSITION()
    jointMin.values = (c_double*7)()
    for index in range(0, len(arrMinPos)):
        jointMin.values[index] = arrMinPos[index]
    jointMax = DIANA_JOINTS_POSITION()
    jointMax.values = (c_double*7)()
    for index in range(0, len(arrMaxPos)):
        jointMax.values[index] = arrMaxPos[index]
    api_mod.setJointsPositionRange.argtypes = [POINTER(DIANA_JOINTS_POSITION), POINTER(DIANA_JOINTS_POSITION), c_char_p]
    api_mod.setJointsPositionRange.restype = c_int
    ret = api_mod.setJointsPositionRange(jointMin, jointMax, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def setMaxJointsVel(arrVel, ipAddress = ''):
    jointVel = DIANA_JOINT_ANGULAR_VEL()
    jointVel.values = (c_double*7)()
    for index in range(0, len(arrVel)):
        jointVel.values[index] = arrVel[index]
    api_mod.setMaxJointsVel.argtypes = [POINTER(DIANA_JOINT_ANGULAR_VEL), c_char_p]
    api_mod.setMaxJointsVel.restype = c_int
    ret = api_mod.setMaxJointsVel(jointVel, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def setMaxJointsAcc(arrAcc, ipAddress = ''):
    jointAcc = DIANA_JOINT_ACC()
    jointAcc.values = (c_double*7)()
    for index in range(0, len(arrAcc)):
        jointAcc.values[index] = arrAcc[index]
    api_mod.setMaxJointsAcc.argtypes = [POINTER(DIANA_JOINT_ACC), c_char_p]
    api_mod.setMaxJointsAcc.restype = c_int
    ret = api_mod.setMaxJointsAcc(jointAcc, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def setMaxCartTranslationVel(TranslationVel, ipAddress = ''):
    api_mod.setMaxCartTranslationVel.argtypes = [c_double, c_char_p]
    api_mod.setMaxCartTranslationVel.restype = c_int
    ret = api_mod.setMaxCartTranslationVel(TranslationVel, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def setMaxCartRotationVel(RotationVel, ipAddress = ''):
    api_mod.setMaxCartRotationVel.argtypes = [c_double, c_char_p]
    api_mod.setMaxCartRotationVel.restype = c_int
    ret = api_mod.setMaxCartRotationVel(RotationVel, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def setMaxCartTranslationAcc(lineAcc, ipAddress = ''):
    api_mod.setMaxCartTranslationAcc.argtypes = [c_double, c_char_p]
    api_mod.setMaxCartTranslationAcc.restype = c_int
    ret = api_mod.setMaxCartTranslationAcc(lineAcc, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def setMaxCartRotationAcc(rotationAcc, ipAddress = ''):
    api_mod.setMaxCartRotationAcc.argtypes = [c_double, c_char_p]
    api_mod.setMaxCartRotationAcc.restype = c_int
    ret = api_mod.setMaxCartRotationAcc(rotationAcc, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def requireHandlingError(ipAddress = ''):
    handling_error = c_int()
    api_mod.requireHandlingError.argtypes = [POINTER(c_int), c_char_p]
    api_mod.requireHandlingError.restype = c_int
    ret = api_mod.requireHandlingError(byref(handling_error), bytes(ipAddress.encode('utf-8')))
    if ret == 0:
        return True, handling_error.value
    else:
        return False, 0

def getJointsSoftLimitRange(arrMin, arrMax, ipAddress = ''):
    jointsMin = DIANA_JOINTS_POSITION()
    jointsMin.values = (c_double*7)()
    jointsMax = DIANA_JOINTS_POSITION()
    jointsMax.values = (c_double*7)()
    api_mod.getJointsSoftLimitRange.argtypes = [POINTER(DIANA_JOINTS_POSITION), POINTER(DIANA_JOINTS_POSITION), c_char_p]
    api_mod.getJointsSoftLimitRange.restype = c_int
    ret = api_mod.getJointsSoftLimitRange(byref(jointsMin), byref(jointsMax), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(arrMin)):
        arrMin[index] = jointsMin.values[index]
    for index in range(0, len(arrMax)):
        arrMax[index] = jointsMax.values[index]
    return message(ret)
